--- a/ttt.html
+++ b/ttt.html
@@ -4,9 +4,24 @@
 </head>
 <html>
 <body>
+  <div id="board">
+    <div id="row1">
+      <div class="col1">&nbsp;</div>
+      <div class="col2">&nbsp;</div>
+      <div class="col3">&nbsp;</div>
+    </div>
+    <div id="row2">
+      <div class="col1">&nbsp;</div>
+      <div class="col2">&nbsp;</div>
+      <div class="col3">&nbsp;</div>
+    </div>
+    <div id="row3">
+      <div class="col1">&nbsp;</div>
+      <div class="col2">&nbsp;</div>
+      <div class="col3">&nbsp;</div>
+    </div>
+  </div>
 
-<script>
-
-</script>
+<script src="board.js"></script>
 </body>
 </html>
