added sybols/colors to players

--- a/ttt.html
+++ b/ttt.html
@@ -21,7 +21,10 @@
       <div class="col3">&nbsp;</div>
     </div>
   </div>
+  <button onclick="new Game()">New Game</button>
 
 <script src="board.js"></script>
+<script src="player.js"></script>
+<script src="game.js"></script>
 </body>
 </html>
